Add board class and tests.